--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@mpxjs/pinia": "^2.9.0",
     "@mpxjs/store": "^2.9.0",
     "@mpxjs/utils": "^2.9.0",
+    "@vant/weapp": "^1.11.6",
+    "axios": "^0.19.2",
+    "axios-miniprogram-adapter": "^0.3.5",
     "pinia": "^2.0.14",
     "vue": "^2.7.0",
     "vue-demi": "^0.14.6",
